PA3/cool.output
Terminals unused in grammar

   ERROR


State 109 conflicts: 9 shift/reduce
State 134 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error '}' ';'

    7 feature_list: features
    8             | %empty

    9 features: feature ';'
   10         | features feature ';'
   11         | error ';'

   12 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID ':' TYPEID
   14        | OBJECTID ':' TYPEID ASSIGN expr

   15 formal: OBJECTID ':' TYPEID

   16 formals: formal
   17        | formals ',' formal
   18        | %empty

   19 expr: OBJECTID ASSIGN expr
   20     | expr '.' OBJECTID '(' parameter_list ')'
   21     | expr '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   22     | OBJECTID '(' parameter_list ')'
   23     | IF expr THEN expr ELSE expr FI
   24     | WHILE expr LOOP expr POOL
   25     | '{' exprs '}'
   26     | LET let
   27     | CASE expr OF cases ESAC
   28     | NEW TYPEID
   29     | ISVOID expr
   30     | expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | '~' expr
   35     | expr '<' expr
   36     | expr LE expr
   37     | expr '=' expr
   38     | NOT expr
   39     | '(' expr ')'
   40     | OBJECTID
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST

   44 exprs: expr ';'
   45      | exprs expr ';'
   46      | error ';'

   47 parameter_list: expr
   48               | parameter_list ',' expr
   49               | %empty

   50 let: OBJECTID ':' TYPEID IN expr
   51    | OBJECTID ':' TYPEID ASSIGN expr IN expr
   52    | OBJECTID ':' TYPEID ',' let
   53    | OBJECTID ':' TYPEID ASSIGN expr ',' let
   54    | error IN expr
   55    | error ',' let

   56 cases: case
   57      | cases case

   58 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 20 21 22 39
')' (41) 12 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 17 48 52 53 55
'-' (45) 31
'.' (46) 20 21
'/' (47) 33
':' (58) 12 13 14 15 50 51 52 53 58
';' (59) 4 5 6 9 10 11 44 45 46 58
'<' (60) 35
'=' (61) 37
'@' (64) 21
'{' (123) 4 5 12 25
'}' (125) 4 5 6 12 25
'~' (126) 34
error (256) 6 11 46 54 55
CLASS (258) 4 5 6
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 50 51 54
INHERITS (263) 5
LET (264) 26
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 58
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 42
INT_CONST (276) 41
BOOL_CONST (277) 43
TYPEID (278) 4 5 12 13 14 15 21 28 50 51 52 53 58
OBJECTID (279) 12 13 14 15 19 20 21 22 40 50 51 52 53 58
ASSIGN (280) 14 19 51 53
NOT (281) 38
LE (282) 36
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5
features (50)
    on left: 9 10 11, on right: 7 10
feature (51)
    on left: 12 13 14, on right: 9 10
formal (52)
    on left: 15, on right: 16 17
formals (53)
    on left: 16 17 18, on right: 12 17
expr (54)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 12 14 19 20 21 23 24 27 29 30 31
    32 33 34 35 36 37 38 39 44 45 47 48 50 51 53 54 58
exprs (55)
    on left: 44 45 46, on right: 25 45
parameter_list (56)
    on left: 47 48 49, on right: 20 21 22 48
let (57)
    on left: 50 51 52 53 54 55, on right: 26 52 53 55
cases (58)
    on left: 56 57, on right: 27 57
case (59)
    on left: 58, on right: 56 57


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . '}' ';'

    '}'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error '}' . ';'

    ';'  shift, and go to state 12


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 16
    features      go to state 17
    feature       go to state 18


State 12

    6 class: CLASS error '}' ';' .

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


State 14

   11 features: error . ';'

    ';'  shift, and go to state 20


State 15

   12 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID . ':' TYPEID
   14        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 16

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 23


State 17

    7 feature_list: features .
   10 features: features . feature ';'

    OBJECTID  shift, and go to state 15

    $default  reduce using rule 7 (feature_list)

    feature  go to state 24


State 18

    9 features: feature . ';'

    ';'  shift, and go to state 25


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 26
    features      go to state 17
    feature       go to state 18


State 20

   11 features: error ';' .

    $default  reduce using rule 11 (features)


State 21

   12 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 18 (formals)

    formal   go to state 28
    formals  go to state 29


State 22

   13 feature: OBJECTID ':' . TYPEID
   14        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 30


State 23

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 24

   10 features: features feature . ';'

    ';'  shift, and go to state 32


State 25

    9 features: feature ';' .

    $default  reduce using rule 9 (features)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 33


State 27

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


State 28

   16 formals: formal .

    $default  reduce using rule 16 (formals)


State 29

   12 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'
   17 formals: formals . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 30

   13 feature: OBJECTID ':' TYPEID .
   14        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 13 (feature)


State 31

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 32

   10 features: features feature ';' .

    $default  reduce using rule 10 (features)


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 38


State 34

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 39


State 35

   12 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 40


State 36

   17 formals: formals ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 41


State 37

   14 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 39

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 40

   12 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 57


State 41

   17 formals: formals ',' formal .

    $default  reduce using rule 17 (formals)


State 42

   23 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 58


State 43

   26 expr: LET . let

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let  go to state 61


State 44

   24 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 62


State 45

   27 expr: CASE . expr OF cases ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


State 46

   28 expr: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 47

   29 expr: ISVOID . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 65


State 48

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


State 49

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


State 50

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


State 51

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' parameter_list ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 40 (expr)


State 52

   38 expr: NOT . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 68


State 53

   34 expr: '~' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 69


State 54

   25 expr: '{' . exprs '}'

    error       shift, and go to state 70
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr   go to state 71
    exprs  go to state 72


State 55

   39 expr: '(' . expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 73


State 56

   14 feature: OBJECTID ':' TYPEID ASSIGN expr .
   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 14 (feature)


State 57

   12 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 83


State 58

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   23     | IF expr . THEN expr ELSE expr FI
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   54 let: error . IN expr
   55    | error . ',' let

    IN   shift, and go to state 85
    ','  shift, and go to state 86


State 60

   50 let: OBJECTID . ':' TYPEID IN expr
   51    | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   52    | OBJECTID . ':' TYPEID ',' let
   53    | OBJECTID . ':' TYPEID ASSIGN expr ',' let

    ':'  shift, and go to state 87


State 61

   26 expr: LET let .

    $default  reduce using rule 26 (expr)


State 62

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   24     | WHILE expr . LOOP expr POOL
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LOOP  shift, and go to state 88
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27     | CASE expr . OF cases ESAC
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    OF   shift, and go to state 89
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   28 expr: NEW TYPEID .

    $default  reduce using rule 28 (expr)


State 65

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   29     | ISVOID expr .
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 29 (expr)


State 66

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 90


State 67

   22 expr: OBJECTID '(' . parameter_list ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    $default  reduce using rule 49 (parameter_list)

    expr            go to state 91
    parameter_list  go to state 92


State 68

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   38     | NOT expr .

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 38 (expr)


State 69

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | '~' expr .
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 34 (expr)


State 70

   46 exprs: error . ';'

    ';'  shift, and go to state 93


State 71

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   44 exprs: expr . ';'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 94


State 72

   25 expr: '{' exprs . '}'
   45 exprs: exprs . expr ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '}'         shift, and go to state 95
    '('         shift, and go to state 55

    expr  go to state 96


State 73

   20 expr: expr . '.' OBJECTID '(' parameter_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   39     | '(' expr . ')'
